# mrover-workspace

config/nav/: config.json  masterTree.xml  vendingMachine.xml
jetson/nav/: layer2_test.cpp  main.cpp  rover.cpp  rover.hpp  stateMachine.cpp  stateMachine.hpp  utilities.cpp  utilities.hpp
jetson/nav/gate_search/: gateStateMachine.cpp
jetson/nav/search/: searchStateMachine.cpp
jetson/nav/test_files/: main.cpp
jetson/nav2/: course.cpp  course.hpp  gimbal.cpp  main.cpp  masterTree.xml  meson.build  path.cpp  path.hpp  pathFollowerBase.cpp  pathFollowerBase.hpp  pathPlannerBase.cpp  pathPlannerBase.hpp  rover.cpp  rover.hpp  simplePathFollower.cpp  simplePathFollower.hpp  simplePathPlanner.cpp  simplePathPlanner.hpp  treeGenerator.cpp  treeGenerator.hpp  utilities.cpp  utilities.hpp  waypoint.cpp  waypoint.hpp
jetson/nav2/followers/: pathFollowerBase.cpp  pathFollowerBase.hpp  simplePathFollower.cpp  simplePathFollower.hpp
jetson/nav2/nodes/: gateNodes.cpp  gateNodes.hpp  searchNodes.cpp  searchNodes.hpp  utilityNodes.cpp  utilityNodes.hpp  vendingMachineNodes.cpp  vendingMachineNodes.hpp
jetson/nav2/planners/: pathPlannerBase.hpp  simplePathPlanner.cpp  simplePathPlanner.hpp
jetson/nav2/searchPatterns/: diamondGateSearch.cpp  diamondGateSearch.hpp  lawnmower.cpp  lawnmower.hpp  searchPatternUtils.cpp  searchPatternUtils.hpp  spiralIn.cpp  spiralIn.hpp  spiralOut.cpp  spiralOut.hpp  sprialOut.cpp
jetson/nav2StateMachine/: gimbal.cpp  main.cpp  meson.build  path.hpp  pathFollowerBase.cpp  pathFollowerBase.hpp  rover.cpp  rover.hpp  simplePathFollower.cpp  simplePathFollower.hpp  utilities.cpp  utilities.hpp
jetson/nav2StateMachine/followers/: pathFollowerBase.hpp  simplePathFollower.cpp  simplePathFollower.hpp
rover_msgs/: Destinations.lcm  Waypoint.lcm
simulators/nav/src/components/: NavSimulator.vue
