project('nav2', 'cpp', default_options : ['cpp_std=c++14'])

liblcm = dependency('lcm')

incdir = include_directories('include')
nodes = include_directories('nodes')
follower = include_directories('followers')
planner = include_directories('planners')

executable('jetson_nav', 'main.cpp', 'treeGenerator.cpp', 'followers/pathFollowerBase.cpp',
            'nodes/gateNodes.cpp',
            'nodes/searchNodes.cpp',
            'nodes/utilityNodes.cpp',
            'nodes/vendingMachineNodes.cpp',
            'planners/simplePathPlanner.cpp',
            'planners/pathPlannerBase.hpp',
            'searchPatterns/lawnmower.cpp',
            'searchPatterns/spiralIn.cpp',
            'searchPatterns/spiralOut.cpp',
            'gimbal.cpp',
            'path.cpp',
            'pid.cpp',
            'rover.cpp',
            'utilities.cpp',
            'followers/simplePathFollower.cpp',
            'src/blackboard.cpp',
            'src/behavior_tree.cpp',
            'src/action_node.cpp',
            'src/tree_node.cpp',
            'src/shared_library.cpp',
            'src/shared_library_UNIX.cpp',
            'src/basic_types.cpp',
            'src/decorator_node.cpp',
            'src/control_node.cpp',
            'src/xml_parsing.cpp',
            'src/condition_node.cpp',
            'src/bt_factory.cpp',
            'src/loggers/bt_file_logger.cpp',
            'src/loggers/bt_cout_logger.cpp',
            'src/decorators/subtree_node.cpp',
            'src/decorators/inverter_node.cpp',
            'src/decorators/repeat_node.cpp',
            'src/decorators/delay_node.cpp',
            'src/decorators/retry_node.cpp',
            'src/controls/if_then_else_node.cpp',
            'src/controls/switch_node.cpp',
            'src/controls/reactive_fallback.cpp',
            'src/controls/sequence_star_node.cpp',
            'src/controls/while_do_else_node.cpp',
            'src/controls/fallback_node.cpp',
            'src/controls/parallel_node.cpp',
            'src/controls/sequence_node.cpp',
            'src/controls/reactive_sequence.cpp',
            'src/private/tinyxml2.cpp',
            'src/private/tinyxml2.h',
           dependencies : [liblcm],
           link_args : '-ldl',
           include_directories : [incdir, nodes, follower, planner],
           install : true)
